duniverse/menhirLib.20200211/test/static/bad/bad-dollar.mly
%token <int> A
%token B C

%%

main: A B
  { $1 + $3 }

