duniverse/menhirLib.20200211/test/static/bad/bad-dollar.exp
File "bad-dollar.mly", line 7, characters 9-11:
Error: $3 refers to a nonexistent symbol.
